# antidote

./: .gitignore  Cargo.toml  README.md  test.sh
crates/api/: Cargo.toml
crates/api/src/: diagnostics_export.rs  lib.rs
crates/api/static/: index.html  insights.html  security.html
crates/behavior/: Cargo.toml
crates/behavior/src/: anomaly.rs  baseline.rs  drift.rs  lib.rs  risk_memory.rs
crates/collectors/: Cargo.toml
crates/collectors/src/: app_detector_macos.rs  audit_macos.rs  foreground_macos.rs  fs_watcher.rs  lib.rs  nsworkspace_observer_macos.rs  proxy.rs  workspace_resolver_macos.rs
crates/collectors/src/workspace_resolver_macos/: cursor_discovery.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: attribution_engine.rs  attribution_state.rs  auto_root_manager.rs  file_event_coalescer.rs  focus_manager.rs  ignore_filters.rs  main.rs  pipeline.rs  rate_limiter.rs  root_policy.rs  session_lifecycle.rs  telemetry_integrity.rs  watcher_supervisor.rs
crates/ruleengine/: Cargo.toml
crates/ruleengine/src/: config.rs  lib.rs  state.rs
crates/ruleengine/src/rules/: mod.rs  r1.rs  r10.rs  r11.rs  r12.rs  r13.rs  r14.rs  r2.rs  r3.rs  r3b.rs  r4.rs  r5.rs  r6.rs  r6b.rs  r7.rs  r8.rs  r9.rs
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql  0002_session_fields.sql  0003_roots_and_retention.sql  0004_observed_roots.sql  0005_audit_fields.sql  0006_behavioral.sql  0007_enforcement.sql  0008_autoroot.sql  0009_attribution.sql  0010_sessions_lifecycle.sql  0011_coalesced_events.sql  0012_attribution_details.sql  0013_autoroot_session_ref.sql  0014_events_root_id.sql  0015_events_drop_session.sql
crates/storage/src/: lib.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_EVENT_DRIVEN.md  TESTING.md  USER_GUIDE.md  VULNERABLE_CASES_TEST.md
docs/validations/: README.md  STEP_01_APP_DETECTOR.md  STEP_02_WORKSPACE_RESOLVER.md  STEP_03_AUTO_ROOT_MANAGER.md  STEP_04_FOCUS_MANAGER_ATTRIBUTION.md  STEP_05_SESSION_LIFECYCLE.md  STEP_06_STABILITY_NOISE_GUARDRAILS.md  STEP_07_ATTRIBUTION_STABILIZATION.md  STEP_08_TELEMETRY_INTEGRITY.md
rules/: rules.yaml
scripts/: audit_setup.md  dev_test.sh  dev_test_phase2.sh  dev_test_phase3.sh  dev_test_phase4.sh  ui_build.sh  ui_dev.sh  verify_features.sh
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: main.tsx  styles.css
ui/src/app/: api.ts  format.ts  hooks.ts  router.tsx  types.ts
ui/src/components/: Card.tsx  ErrorBoundary.tsx  ErrorState.tsx  Layout.tsx  Loading.tsx  StatusPill.tsx  Table.tsx
ui/src/pages/: AppDetail.tsx  Dashboard.tsx  Diagnostics.tsx  Privacy.tsx  RootDetail.tsx  SessionDetail.tsx
