[package]
name = "antidote-collectors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
antidote-core = { path = "../core" }
tokio = { workspace = true }
sysinfo = { workspace = true }
notify = { workspace = true }

# Phase 2: NSWorkspace notifications (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["NSOperation", "block2", "NSString", "NSDictionary", "NSNotification", "NSArray", "NSObject"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWorkspace", "NSRunningApplication", "libc"] }
block2 = "0.6"
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
regex = "1.10"
async-trait = "0.1"