[package]
name = "antidote-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "antidote-daemon"
path = "src/main.rs"

[dependencies]
antidote-core = { path = "../core" }
antidote-storage = { path = "../storage" }
antidote-rules = { path = "../rules" }
antidote-api = { path = "../api" }
antidote-collectors = { path = "../collectors" }
antidote-session = { path = "../session" }
futures = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }