[package]
name = "antidote-rules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
antidote-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
globset = { workspace = true }
time = { workspace = true }