[package]
name = "antidote-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
antidote-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
